--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		
-		<title>Astro</title>
+		<title>Astro Knots Unite!</title>
 	</head>
 	<body>
 		<style>
